--- a/assets/sass/style.scss
+++ b/assets/sass/style.scss
@@ -656,14 +656,14 @@ i {
             &__price {
                 display: block;
                 position: absolute;
-                bottom: -15px;
+                bottom: 0px;
                 right: 0;
                 @include shadow;
 
                 &__bar {
                     padding: 10px;
-                    background-color: $white;
-                    color: $orange;
+                    background-color: $orange;
+                    color: $white;
                     font-weight: bold;
                     font-size: 2.2rem;
                     text-align: center;
@@ -681,6 +681,7 @@ i {
         }
     }
 
+// サービス内容の項目を増やした際は、数字を変更
     &__topics2 {
 
         &__topic {
@@ -1500,6 +1501,7 @@ p.answer {
 
 
 
+
 /*スマホ用ウィンドウ幅が最大479pxまでの場合に適用*/
 @media screen and (max-width: 768px) {
     .w {
@@ -1787,7 +1789,7 @@ p.answer {
         }
 
     }
-
+// サービス
     .service {
         padding-top: 30px;
         padding-bottom: 40px;
@@ -1832,25 +1834,31 @@ p.answer {
             }
         }
 
+        &_area{
+            // padding-top: 10px;
+        }
+
         &__topics1,
         &__topics2 {
             width: 95%;
             margin: 0 auto;
 
             &__topic {
-                margin: 0;
+                margin: 15px;
                 height: auto;
 
-                &__title {
-                    margin-top: 15px;
-                    width: auto;
-                    height: auto;
-                    max-width: 100%;
-                    max-height: 100%
+                &_title {
+                    width: 100%;
+                    text-align: center;
+                    font-size: 0.9rem;
+                    padding: 0;
+                    height: 30px;
                 }
 
                 &__price {
-                    width: 95%;
+                    position: absolute;
+                    bottom:-10px;
+                    width: 100%;
                     margin: 0 auto;
 
                     &__bar {
@@ -1858,14 +1866,16 @@ p.answer {
                         padding: 5px 0 5px 0;
                     }
                 }
+                img {
+                }
             }
 
             &__topic:first-child {
-                margin: 0;
+                margin: 15px 0;
             }
 
             &__topic:last-child {
-                margin: 0;
+                margin: 15px 0;
             }
         }
 
